- 
    Bug 
- 
    Resolution: Done
- 
     Not Evaluated Not Evaluated
- 
    Qt Creator 4.3.0
- 
    None
- 
    Qt Creator 4.3.0
 Based on Qt 5.8.0 (GCC 5.3.1 20160406 (Red Hat 5.3.1-6), 64 bit)
 Built on May 23 2017 11:09:03
 From revision 7482d8a152
This is hard to reproduce, as it seems to only happen after Creator has been open for a while (restarting Creator and following the same steps as shown in the GIF does not reproduce the issue). The problem is always the same though: using an auto-completion suggestion overwrites text on that line with the suggestion contents, plus the text that was typed to prompt the suggestion.
Reproduced on a fresh install of Ubuntu 16.04 (installed yesterday). I can't remember if it has happened on any other platforms.
- replaces
- 
                    QTCREATORBUG-18477 QML autocomplete corrupts code -           
- Closed
 
-         
- 
                    QTCREATORBUG-18511 Automatically insert matching characters bug -           
- Closed
 
-         
| For Gerrit Dashboard: QTCREATORBUG-18449 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 198870,5 | QmlJs: avoid overwrites by auto-completion | 4.3 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |